docs: Rewrite docs for Java port
Update CLAUDE.md, ARCHITECTURE.md, DEVELOPMENT.md, TESTING.md, and REPL.md
to reflect the Java 25 implementation replacing the Rust one. All Rust-specific
content (Cargo, Rc, snake_case conventions, cargo test) replaced with accurate
Java equivalents (Maven/Gradle, sealed records, Google Java Format, JUnit 5).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>